# soundplanelib

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  helloSoundplane.cpp
include/: SensorFrame.h  SoundplaneDriver.h  SoundplaneModelA.h  libsoundplane.h
source/: CMakeLists.txt  LibusbSoundplaneDriver.cpp  LibusbSoundplaneDriver.h  MacSoundplaneDriver.cpp  MacSoundplaneDriver.h  SensorFrame.cpp  SoundplaneDriver.h  ThreadUtility.cpp  Unpacker.h
